trigger
implementazione dei trigger